# AliengoCtrl

./: CMakeLists.txt
MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  MIT_Controller.hpp  MIT_UserParameters.h  main.cpp
MIT_Controller/common/: CMakeLists.txt
MIT_Controller/common/include/ControlParameters/: ControlParameters.h
MIT_Controller/common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
MIT_Controller/common/include/Dynamics/: Aliengo.h  UnitreeA1.h
MIT_Controller/common/include/FootstepPlanner/: GraphSearch.h
MIT_Controller/common/include/Math/: orientation_tools.h
MIT_Controller/common/include/SparseCMPC/: SparseCMPC.h
MIT_Controller/common/include/Types/: IMUTypes.h  MPCTypes.h  cppTypes.h
MIT_Controller/common/include/Utilities/: Utilities_print.h  save_file.h  utilities.h
MIT_Controller/common/src/ControlParameters/: ControlParameters.cpp
MIT_Controller/common/src/Controllers/: DesiredStateCommand.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
MIT_Controller/common/src/FootstepPlanner/: GraphSearch.cpp
MIT_Controller/common/src/Utiliites/: save_file.cpp
MIT_Controller/config/: initial_jpos_ctrl.yaml  mc-mit-ctrl-user-parameters.yaml
MIT_Controller/fsm_states/: CMakeLists.txt  ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_StandUp.cpp  FSM_State_StandUp.h  SafetyChecker.cpp
MIT_Controller/log/: mpc_5July_2.txt
MIT_Controller/mit_ctrl/: CMakeLists.txt
MIT_Controller/mit_ctrl/WBC/: ContactSpec.hpp  Task.hpp  WBC.hpp
MIT_Controller/mit_ctrl/WBC/WBIC/: CMakeLists.txt  WBIC.cpp
MIT_Controller/mit_ctrl/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
MIT_Controller/mit_ctrl/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
MIT_Controller/mit_ctrl/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp  BodyPostureTask.cpp  JPosTask.cpp  LocalRollTask.cpp
MIT_Controller/mit_ctrl/convexMPC/: CMakeLists.txt  ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.h  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h  convexMPC_util.h
MIT_Controller/robot/: CMakeLists.txt
MIT_Controller/robot/include/: RobotController.h  RobotRunner.h  main_helper.h
MIT_Controller/robot/src/: RobotRunner.cpp  main_helper.cpp
unitree_sdk/: CMakeLists.txt
unitree_sdk/examples/: example_position.cpp
unitree_sdk/include/: hardware_interface.h
unitree_sdk/src/: hardware_interface.cpp
